1) added rpi3 firmware and modules into pkg/getty for now 2) added dhcpcd (non-busybox) into pkg/getty for now

--- a/pkg/getty/Dockerfile
+++ b/pkg/getty/Dockerfile
@@ -10,8 +10,13 @@ RUN apk add --no-cache --initdb -p /out \
     tini \
     util-linux \
     wireguard-tools \
+    dhcpcd \
     && true
 RUN mv /out/etc/apk/repositories.upstream /out/etc/apk/repositories
+
+# unpack rpi3 firmware and modules into resultant image / (via /out)
+ADD --chown=root:root firmware.tar.gz /out
+ADD --chown=root:root modules.tar.gz /out
 
 #
 # We require a version of `setsid(1)` which supports the `-w`
