1) modified pkg/modprobe to include "/sbin/modprobe -a brcmfmac" 2) updated filename for lib/modules and lib/firmware packages to be more explicit about versions and arch 3) added lib/modules and lib/firmware to pkg/modprobe 4) created new examples/gettyInInitWithFirmwareModulesAndDhcpcdAndModprobe.yml which runs the new pkg/modprobe before pkg/getty 5) built new examples/gettyInInitWithFirmwareModulesAndDhcpcdAndModprobe-initrd.img

--- a/pkg/getty/Dockerfile
+++ b/pkg/getty/Dockerfile
@@ -15,8 +15,8 @@ RUN apk add --no-cache --initdb -p /out \
 RUN mv /out/etc/apk/repositories.upstream /out/etc/apk/repositories
 
 # unpack rpi3 firmware and modules into resultant image / (via /out)
-ADD --chown=root:root firmware.tar.gz /out
-ADD --chown=root:root modules.tar.gz /out
+ADD --chown=root:root rpi3-lib_firmware.tar.gz /out
+ADD --chown=root:root lib_modules-4.9.13-bee42-v8.tar.gz /out
 
 #
 # We require a version of `setsid(1)` which supports the `-w`
